[gd_scene load_steps=5 format=3 uid="uid://d1cm1cw0blfuj"]

[ext_resource type="Script" path="res://Enemies/Level_1/Bobot/e_bobot.gd" id="1_hsv61"]
[ext_resource type="PackedScene" uid="uid://il3ijeiqoruh" path="res://Characters/Bobot/bobot.tscn" id="1_p7kik"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wwrqg"]
radius = 40.6305
height = 195.765

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ayots"]
radius = 32.3197
height = 186.531

[node name="E_Bobot" type="CharacterBody2D"]
scale = Vector2(1.08293, 1.08293)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_hsv61")

[node name="Bobot" parent="." instance=ExtResource("1_p7kik")]
unique_name_in_owner = true
position = Vector2(19.3918, 0)

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.923421, -33.2431)
shape = SubResource("CapsuleShape2D_wwrqg")
debug_color = Color(0.701961, 0, 0.0313726, 0.447059)

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0.923421, -34.1666)
shape = SubResource("CapsuleShape2D_ayots")

[node name="dmg_rate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="timeout" from="dmg_rate" to="." method="_on_dmg_rate_timeout"]
